--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1b8eaf12e5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="dist/css/main.min.css">
 </head>
 
 <body>
@@ -94,13 +95,10 @@
             </div>
         </article>
         <div class="wrap art2" data-section="me" id="me">
-            <div class="aboutme">
-                <div class="color">
-                    <!-- <div class="aboutme_img">
-        <img src="img/img_about_me.png" alt="o mnie">
-    </div> -->
+            <div class="container_about">
+                <div class="left_side">
                     <h2>o mnie</h2>
-                    <div class="text2">
+                    <div class="about__text">
                         <p>Od 2014r. zajmuje się doradztwem finansowym i weryfikuję nieruchomości przed zakupem.
                             Dzięki mojemu doświadczeniu w branży nieruchomości i finansów zyskują Państwo gwarancję i
                             bezpieczeństwo przy zakupie oraz unikną
@@ -110,13 +108,26 @@
                             moją karierę nie spotkałem nikogo,
                             kto sprzedał/kupił nieruchomość przez telefon. Dajmy sobie szansę i spotkajmy się.</p>
                     </div>
-                    <div class="in">
+                    <div class="about__in">
                         <a href="https://pl.linkedin.com/in/tomasz-g%C3%B3rz-96089a182" target="_blank" rel="noopener">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </div>
                 </div>
+                <div class="right_side">
+                    <img src="./img/about_me.png" alt="O mnie">
+                </div>
             </div>
+
+
+<!--            <div class="aboutme">-->
+<!--                <div class="color">-->
+<!--                    &lt;!&ndash; <div class="aboutme_img">-->
+<!--        <img src="img/img_about_me.png" alt="o mnie">-->
+<!--    </div> &ndash;&gt;-->
+
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </main>
     <section class="contact art3" data-section="contact1" id="contact1">
