--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header class="first">
         <div class="logo">
-            <a href=#>
+            <a href="https://tomaszgorz.pl">
                 <img src="img/logo.png" alt="Tomasz Górz- doradca finansowy">
             </a>
         </div>
@@ -49,7 +49,11 @@
         </div>
         <section class="animation">
             <img src="img/img_color.png" alt="Tomasz Górz kolor" class="color">
-            <img src="img/img.png" alt="Tomasz Górz szary" class="gray">
+
+            <a href="https://tomaszgorz.pl">
+                <img src="img/img.png" alt="Tomasz Górz szary" class="gray">
+            </a>
+
             <div class="person">
                 <h1>Doradca kredytowy</h1>
                 <h2>Kredyty hipoteczne, kredyty konsumenckie i finansowanie dla firm w jednym miejscu.</h2>
@@ -102,7 +106,7 @@
                         <p>Od 2014r. zajmuje się doradztwem finansowym i weryfikuję nieruchomości przed zakupem.
                             Dzięki mojemu doświadczeniu w branży nieruchomości i finansów zyskują Państwo gwarancję i
                             bezpieczeństwo przy zakupie oraz unikną
-                            stresu przy procesie uzyskiwania kredytu hipotecznego. Przewiduwalność, uczciwość i
+                            stresu przy procesie uzyskiwania kredytu hipotecznego. Przewidywalność, uczciwość i
                             sumiennosć dzięki tym cechom odniosłem sukces
                             zawodowy i tego samego wymagam od swoich klientów oraz partnerów biznesowych. Przez całą
                             moją karierę nie spotkałem nikogo,
@@ -153,7 +157,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="link" href="mailto:mail@domena.pl">
+                            <a class="link" href="mailto:gorz.tomasz@o2.pl">
                                 <i class="fas fa-envelope-square"></i><span>gorz.tomasz@o2.pl</span>
                             </a>
                         </li>
@@ -195,7 +199,7 @@
         </div>
 
         <div class="author">
-            <p>Strona stworzona przez<span><a href="https://joannagorz.dev/">joannagorz.dev</a></span></p>
+            <p>Strona stworzona przez<span> <a href="https://joannagorz.dev/">joannagorz.dev</a></span></p>
         </div>
     </footer>
     <script src="jQuery v3.6.0.js"></script>
